<resources>
    <string name="msg_wifi_enabled">Wifi enabled</string>
    <string name="msg_mobile_data_enabled">Mobile data enabled</string>
    <string name="msg_not_connected_to_internet">Not connected to Internet</string>

    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data Message: "</string>
    <string name="log_fcm_data_message">"FCM Data Message:(TA)G "</string>
    <string name="text_ok">OK</string>
    <string name="text_exit">Exit</string>
    <string name="text_retry">Retry</string>
    <string name="session_expired">Session expired.</string>
    <string name="loading">Loading…</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!--Error-->
    <string name="error_email_field_empty">Please enter email address.</string>
    <string name="error_invalid_email">Please enter valid email address.</string>
    <string name="error_password_field_empty">Please enter password.</string>
    <string name="error_confirm_password_field_empty">Please enter confirm password.</string>
    <string name="error_password_must_be_greater_than_5_character">Password must be greater than 5 character.</string>
    <string name="error_phone_number_field_empty">Please enter phone number.</string>
    <string name="error_invalid_phone_number">Please enter valid phone number.</string>
    <string name="error_first_name_field_empty">Please enter first name</string>
    <string name="error_name_field_empty">Please enter name</string>
    <string name="error_last_name_field_empty">Please enter last name</string>
    <string name="error_name_two_character_long">Name must contain at least two characters</string>
    <string name="error_first_name_two_character_long">First name must contain at least two characters</string>
    <string name="error_last_name_two_character_long">Last name must contain at least two characters</string>
    <string name="error_name_special_number_character">Name cannot contain number &amp; special characters</string>
    <string name="error_first_name_special_number_character">First name cannot contain number &amp; special characters</string>
    <string name="error_last_name_special_number_character">Last name cannot contain number &amp; special characters</string>
    <string name="error_password_mismatch">Password Mismatch!</string>
    <string name="error_no_files_added">No files added</string>
    <string name="error_device_not_supported">This device is not supported.</string>
    <string name="error_internet_not_connected">Not connected to internet. Please check your internet connection or try again later.</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>
    <string name="error_date">Date not in Correct format</string>

    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="title_settings_dialog">Permissions Required</string>

    <!--Button-->
    <string name="button_signin">Sign In</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_signup_with_facebook">Sign Up With Facebook</string>
    <string name="button_resend_otp">Resend OTP</string>
    <string name="button_edit_number">Edit Number</string>
    <string name="button_verify">Verify</string>
    <string name="button_next">Next</string>
    <string name="button_skip">Skip >> </string>
    <string name="button_save_and_continue">Save &amp; Continue</string>
    <string name="button_submit">Submit</string>


    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="accept_terms_and_condition">I accept <u>Terms and Service </u>and<u> Privacy Policy</u></string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password"><u><b>Froget Password?</b></u></string>
    <string name="btn_sign_in_with_facebook">SignIn With Facebook</string>
    <string name="details">Details</string>


    <!--Edit Text-->
    <string name="edit_text_name">Name</string>
    <string name="edit_text_phone_number">Phone Number</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_data_of_birth">Date of Birth</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_confirm_password">Confirm Password</string>
    <string name="edit_text_email_or_phone_number">Email/Phome Number</string>
    <string name="edit_text_phone_start">+91</string>
    <string name="edit_text_select_gender">Select\nGender:</string>


    <string name="otp_text">Please Enter OTP number you have recieved as an SMS on phone no :</string>

    <!--Text View-->
    <string name="text_view_releationship_history">Relationship history</string>
    <string name="text_view_euthnicity">Euthnicity</string>
    <string name="text_view_religion">Religion</string>
    <string name="text_view_height">Height</string>
    <string name="text_view_body_type">Body Type</string>
    <string name="text_view_smoking">Smoking</string>
    <string name="text_view_Drinking">Drinking</string>
    <string name="text_view_orientation">Orientation</string>
    <string name="text_view_profile_completeness">Profile completeness</string>
    <string name="text_your_account">YOUR ACCOUNT</string>
    <string name="text_view_home">Home</string>
    <string name="text_view_date_posts">Date Posts</string>
    <string name="text_view_my_confirmed_dates">My Confirmed Dates</string>
    <string name="text_view_my_favourites">My Favourites</string>
    <string name="text_view_membership">Membership</string>
    <string name="text_view_account_setting">Account Settings</string>
    <string name="text_view_logout">Logout</string>


</resources>