<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="vertical"
            >

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvRelationshipHistory"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_releationship_history"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvEuthnicity"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_euthnicity"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvReligion"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_religion"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvHeight"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_height"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvBodyType"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_body_type"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvSmoking"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_smoking"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvDrinking"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_Drinking"
                />

            <com.skeleton.util.customview.MaterialEditText
                android:id="@+id/tvOrientation"
                style="@style/edit_text_profile"
                android:layout_marginTop="@dimen/margin_small"
                android:drawableEnd="@drawable/height_dropdown"
                android:hint="@string/text_view_orientation"
                />

            <Button
                android:id="@+id/btnNext"
                style="@style/primary_button"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button_next"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>