<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearDrawer"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:background="@color/black_drawer"
              android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_xxlarge"
        android:layout_marginStart="@dimen/margin_xxlarge"
        android:orientation="vertical"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_profile_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/my_profile_ph"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp"
            />

        <TextView
            android:id="@+id/tvdrawerUserAccount"
            style="@style/text_view_drawer"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/text_your_account"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_xsmall"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginStart="@dimen/margin_xlarge"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_home"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/icon_home"
            android:text="@string/text_view_home"
            />

        <TextView
            android:id="@+id/tv_date_posts"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/date_posts"
            android:text="@string/text_view_date_posts"
            />

        <TextView
            android:id="@+id/tv_confirmed_dates"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/my_dates"
            android:text="@string/text_view_my_confirmed_dates"
            />

        <TextView
            android:id="@+id/tv_favourites"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/fav"
            android:text="@string/text_view_my_favourites"
            />

        <TextView
            android:id="@+id/tv_membership"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/mmemberships"
            android:text="@string/text_view_membership"
            />

        <TextView
            android:id="@+id/tv_account_setting"
            style="@style/text_view_drawer"
            android:drawableStart="@drawable/settings"
            android:text="@string/text_view_account_setting"
            />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_logout"
        style="@style/text_view_drawer"
        android:layout_gravity="center"
        android:text="@string/text_view_logout"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_small"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:background="@drawable/side_menu_exut"
        />

</LinearLayout>


